--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@ body {
     text-align: center;
 }
 
-header {
+#header {
+    height: 200px;
     margin-bottom: 100px;
-    padding: 25px;
     background-color: steelblue;
-    font-size: 25pt; /* has no effect on materialize styling?? */
+    line-height: 200px;
+    font-size: 50pt;
     color: white;
 }
 
