--- a/style.css
+++ b/style.css
@@ -1,37 +1,43 @@
 body {
     text-align: center;
 }
-
-header {
+#header {
+    height: 200px;
     margin-bottom: 100px;
-    padding: 25px;
     background-color: steelblue;
-    font-size: 25pt; /* has no effect on materialize styling?? */
+    line-height: 200px;
+    font-size: 50pt;
     color: white;
 }
-
 #title-text {
     font-size: 20pt;
 }
-
 #search-city {
     width: 250px;
     border: 3px solid steelblue;
     text-align: center;
     font-size: 12pt;
 }
-
 .hide {
     display: none;
 }
-
+p {
+    margin-top: 80px;
+    text-align: center !important;
+}
+span {
+    font-size: larger;
+    font-weight: bolder;
+}
 #formId {
     margin: auto;
     width: fit-content;
     text-align: left;
     font-size: 12pt !important; /* has no effect on materialize styling?? */
 }
-
 #submit-btn {
     margin: 20%;
+}
+#team-result {
+    font-size: 25pt;
 }
