--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 #header {
     height: 200px;
     margin-bottom: 100px;
-    background-color: steelblue;
+    background-color: #EE6E74;
     line-height: 200px;
     font-size: 50pt;
     color: white;
