--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 #search-city {
     width: 250px;
-    border: 3px solid steelblue;
+    border: 3px solid #26A79A;
     text-align: center;
     font-size: 12pt;
 }
