--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 #search-city {
     width: 250px;
-    border: 3px solid steelblue;
+    border: 3px solid #26a79a;
     text-align: center;
     font-size: 12pt;
 }
@@ -26,6 +26,7 @@ p {
     text-align: center !important;
 }
 span {
+    color: #26a79a;
     font-size: larger;
     font-weight: bolder;
 }
@@ -40,4 +41,8 @@ span {
 }
 #team-result {
     font-size: 25pt;
+}
+
+#match-results {
+    font-size: 15pt;
 }
